vtkPVVTKExtensionsH5PartReader: update to the new module system

--- a/ParaViewCore/VTKExtensions/H5PartReader/CMakeLists.txt
+++ b/ParaViewCore/VTKExtensions/H5PartReader/CMakeLists.txt
@@ -2,43 +2,31 @@
 ## CSCS - Swiss National Supercomputing Centre for creating and contributing
 ## this plugin.
 
-INCLUDE_DIRECTORIES(
-  ${vtkhdf5_INCLUDE_DIRS}
-  ${VTK_INCLUDE_DIRS}
-  ${CMAKE_CURRENT_SOURCE_DIR}/H5Part/src
-  )
+set(classes
+  vtkH5PartReader)
 
-if(PARAVIEW_USE_MPI)
-  ADD_DEFINITIONS(-DH5PART_HAS_MPI)
-endif()
-
-ADD_DEFINITIONS(-DH5_USE_16_API)
-
-# needed for mpich
-add_definitions("-DMPICH_IGNORE_CXX_SEEK")
-
-if(PARAVIEW_USE_MPI)
-  include(vtkMPI)
-endif()
-
-set(Module_SRCS
-    vtkH5PartReader.cxx
-    H5Part/src/H5Part.c
-    H5Part/src/H5Block.c
-    )
-vtk_module_library(vtkPVVTKExtensionsH5PartReader ${Module_SRCS})
-
-if (PARAVIEW_USE_MPI)
-  vtk_mpi_link(vtkPVVTKExtensionsH5PartReader)
-endif()
-
-set_source_files_properties(
-  ${Module_SRCS}
+set(sources
+  # TODO: Move H5Part to ThirdParty/
+  H5Part/src/H5Block.c
+  H5Part/src/H5Part.c)
+set_source_files_properties(${sources}
   PROPERTIES
-    SKIP_HEADER_INSTALL 1)
+    LANGUAGE CXX)
 
-SET_SOURCE_FILES_PROPERTIES(
-  ${CMAKE_CURRENT_SOURCE_DIR}/H5Part/src/H5Part.c
-  ${CMAKE_CURRENT_SOURCE_DIR}/H5Part/src/H5Block.c
-  PROPERTIES LANGUAGE CXX
-)
+vtk_module_add_module(ParaView::VTKExtensionsH5PartReader
+  CLASSES ${classes}
+  SOURCES ${sources})
+if (PARAVIEW_USE_MPI)
+  vtk_module_definitions(ParaView::VTKExtensionsH5PartReader
+    PRIVATE
+      H5PART_HAS_MPI)
+endif ()
+vtk_module_definitions(ParaView::VTKExtensionsH5PartReader
+  PRIVATE
+    H5_USE_16_API)
+vtk_module_include(ParaView::VTKExtensionsH5PartReader
+  PRIVATE
+    "${CMAKE_CURRENT_SOURCE_DIR}/H5Part/src")
+
+paraview_add_server_manager_xmls(
+  XMLS  H5PartServerManager.xml)
